@@ -1,5 +1,5 @@
-import uk.gov.hmrc.DefaultBuildSettings
 import play.sbt.PlayImport.PlayKeys.playDefaultPort
+import uk.gov.hmrc.DefaultBuildSettings
 
 val appName = "partnership-identification"
 
@@ -8,14 +8,22 @@ lazy val microservice = Project(appName, file("."))
   .settings(libraryDependencies ++= AppDependencies.compile ++ AppDependencies.test)
   .settings(
     ThisBuild / majorVersion := 0,
-    ThisBuild / scalaVersion := "2.13.16")
+    ThisBuild / scalaVersion := "3.7.4")
   .settings(scalacOptions ++= Seq(
     "-Wconf:src=routes/.*:s",
-    "-Wconf:cat=unused-imports&src=html/.*:s"
+    "-Wconf:msg=unused import&src=html/.*:s",
+    "-Wconf:msg=Flag.*repeatedly:s",
+    "-Wconf:msg=Implicit parameters should be provided with a `using` clause:s"
   ))
-  .settings(resolvers += Resolver.jcenterRepo)
   .settings(ScoverageSettings.settings *)
   .settings(playDefaultPort := 9987)
+  .settings(
+    Test / javaOptions ++= Seq(
+      "--add-opens=java.base/java.lang=ALL-UNNAMED",
+      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+      "-XX:+EnableDynamicAgentLoading",
+    )
+  )
 
 lazy val it = project
   .enablePlugins(PlayScala)
